2004-06-21  Shahzad Muzaffar <Shahzad.Muzaffar@cern.ch>

	* BuildFile: updated for new SCRAM V1.

2004-06-15  Lassi A. Tuura  <lat@iki.fi>

	* scripts/igprof-analyse: Don't make GDB resolution the default.
	Only do GDB resolution if the library name is non-null.  Improve
	recognition of GDB output.  Fix input file parsing.

	* IgProf.cc (panic, dumpSymbols): Also print out library offset.
	* scripts/igprof-analyse: Handle new library offset for symbols.
	Optionally remap symbols with gdb to real (possibly private)
	symbols.

2004-06-07  Giulio Eulisse  <giulio.eulisse@cern.ch>

	* IgProfPerf.cc (add): Drop profileSignalHandlerFrame ().

2004-06-05  Lassi A. Tuura  <lat@iki.fi>

	* IgProfPerf.cc (add): Increase and document the number of stack
	frames to drop.  Need to drop off signal delivery stack frames.

2004-06-04  Lassi A. Tuura  <lat@iki.fi>

	* igprof: Only support profiling.  Clean up option handling and
	document all available options; remove option shortcuts.  Support
	performance profiler options to select timer.

	* IgProfPerf.cc: Support real, user and process time profiling.
	Select the timer and signal to use based on this choice.

	* IgProfMem.cc: Make "live" memory track both final live memory
	(= leaked memory) and maximum live memory in each call context.

2004-05-16  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Optionally demangle symbols.  Sanitise symbol
	and library names in HTML output.  Make sure all counters are
	always correctly tracked, including unknown counters specified on
	the command line.

2004-05-15  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Take short options. Output text, html and xml.

	* test/test_load.cc: Reduce loop counts, we now do real locking
	so programs run much slower.

	* IgProf.cc, IgProfPerf.cc: Wise up.  The pthreads locking stuff
	does not work with asynchronous signals.  So make each thread keep
	its own tree roots so the (performance) profiling module can add